unpackaged/main/default/objects/SDO_B2BCommerce_CustomContent__c/SDO_B2BCommerce_CustomContent__c.object-meta.xml
<CustomObject>
    <description>What: Used by the Moodboard B2B Commerce LE component
Who: B2B Commerce Team.</description>
    <label>B2BLE Custom Content</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2BLE Custom Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>