unpackaged/main/default/objects/SDO_B2BCommerce_CustomContent__c/fields/B2B_LE_Content_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_LE_Content_Name__c</fullName>
    <label>B2B LE Content Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>