unpackaged/main/default/objects/SDO_B2BCommerce_CustomContent__c/fields/Image_URI__c.field-meta.xml
<CustomField>
    <fullName>Image_URI__c</fullName>
    <label>Image URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>