unpackaged/main/default/objects/SDO_B2BCommerce_CustomContent__c/listViews/All_b2blecc.listView-meta.xml
<ListView>
    <fullName>All_b2blecc</fullName>
    <columns>NAME</columns>
    <columns>B2B_LE_Content_Name__c</columns>
    <columns>Title__c</columns>
    <columns>Long_Description__c</columns>
    <columns>Image_URI__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>