unpackaged/main/default/objects/SDO_B2BCommerce_CustomContent__c/listViews/Full_CMS_Item.listView-meta.xml
<ListView>
    <fullName>Full_CMS_Item</fullName>
    <columns>NAME</columns>
    <columns>B2B_LE_Content_Name__c</columns>
    <columns>Image_URI__c</columns>
    <columns>Long_Description__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>B2B_LE_Content_Name__c</field>
        <operation>equals</operation>
        <value>Full CMS Item</value>
    </filters>
    <label>Full CMS Item</label>
</ListView>